--- a/notebooks/samia.ipynb
+++ b/notebooks/samia.ipynb
@@ -524,22 +524,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cab28699",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['AUSTRALIA', 'BAHAMAS', 'SEYCHELLES', 'ARGENTINA', 'COSTA RICA',\n",
+       "       'BRAZIL', 'EGYPT', 'FRENCH POLYNESIA', 'USA', 'COLOMBIA',\n",
+       "       'SOUTH AFRICA', 'SPAIN', 'COMOROS', 'MEXICO', 'CAPE VERDE',\n",
+       "       'CAYMAN ISLANDS', 'ITALY', nan, 'JAMAICA', 'TRINIDAD & TOBAGO',\n",
+       "       'CANADA', 'CROATIA', 'SAUDI ARABIA', 'ANTIGUA',\n",
+       "       'UNITED ARAB EMIRATES (UAE)', 'GUAM', 'NEVIS', 'JAPAN',\n",
+       "       'NEW ZEALAND', 'BRITISH VIRGIN ISLANDS', 'SENEGAL', 'BELIZE',\n",
+       "       'Seychelles', 'LIBERIA', 'HONDURAS', 'SRI LANKA', 'INDONESIA',\n",
+       "       'NEW CALEDONIA', 'MADAGASCAR', 'MALAYSIA', 'TONGA', 'BERMUDA',\n",
+       "       'MONTENEGRO', 'SOMALIA', 'GREECE', 'MOZAMBIQUE',\n",
+       "       'PAPUA NEW GUINEA', 'TANZANIA', 'PANAMA', 'PHILIPPINES',\n",
+       "       'ATLANTIC OCEAN', 'JOHNSTON ISLAND', 'MARSHALL ISLANDS',\n",
+       "       'CARIBBEAN SEA', 'TURKEY', 'CUBA', 'GUATEMALA',\n",
+       "       'NORTH ATLANTIC OCEAN', 'NORTH PACIFIC OCEAN', 'PACIFIC OCEAN',\n",
+       "       'INDIAN OCEAN', 'UNITED KINGDOM', 'ISRAEL', 'ITALY / CROATIA',\n",
+       "       'INDIA', 'HAITI', 'ENGLAND', 'YEMEN ', 'CRETE', 'FRANCE', 'SYRIA',\n",
+       "       'AZORES', 'Fiji', 'GUYANA', 'CHINA', 'NORWAY', 'ICELAND', 'ROATAN',\n",
+       "       'GUINEA'], dtype=object)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['Country'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "53f433fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Country'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "2e481322",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['M', 'F', nan], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['Sex'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "19cd2142",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     480\n",
+       "unique      2\n",
+       "top         M\n",
+       "freq      415\n",
+       "Name: Sex, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Sex'].describe()"
    ]
   },
   {
@@ -614,10 +699,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b0589b2d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Unprovoked', 'Questionable', nan, 'Watercraft', 'Provoked',\n",
+       "       'Unconfirmed', 'Invalid', 'Sea Disaster'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['Type'].unique()"
    ]
