--- a/notebooks/blanca.ipynb
+++ b/notebooks/blanca.ipynb
@@ -42,7 +42,7 @@
     "## 🌀COLUMNS TO CLEAN : \n",
     "-----\n",
     "\n",
-    "**- COUNTRY (global comparison between countries to invest in more)**\n",
+    "**- COUNTRY (global comparison between countries to invest in more)**@Blanca\n",
     "\n",
     "    * we just take the country column and make sure every country name is accurately named\n",
     "    * We are gonna check the column of COUNTRY and make sure every country name is correct\n",
@@ -51,7 +51,7 @@
     "        United States of Amercia == USA == US\n",
     "        it has to have the same name and consistent!\n",
     "\n",
-    "**- DATE ( MONTH + YEAR )**\n",
+    "**- DATE ( MONTH + YEAR )**@Blanca\n",
     "\n",
     "    * split the date into day - month columns and only use month column\n",
     "    * interpret months which have shark attacks happen the most\n",
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import data\n",
+    "#import data.\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "18d81baa",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
       " 'Tanzania' 'Panama' 'Philippines' 'Atlantic Ocean' 'Johnston Island'\n",
       " 'Marshall Islands' 'Caribbean Sea' 'Turkey' 'Cuba' 'Guatemala'\n",
       " 'North Atlantic Ocean' 'North Pacific Ocean' 'Pacific Ocean'\n",
-      " 'Indian Ocean' 'Uk' 'Israel' 'Italy / Croatia' 'India' 'Haiti' 'Yemen'\n",
+      " 'Indian Ocean' 'UK' 'Israel' 'Italy / Croatia' 'India' 'Haiti' 'Yemen'\n",
       " 'Crete' 'France' 'Syria' 'Azores' 'Fiji' 'Guyana' 'China' 'Norway'\n",
       " 'Iceland' 'Roatan' 'Guinea']\n"
      ]
@@ -160,6 +160,7 @@
     "    \"U.s.\": \"USA\",\n",
     "    \"United Kingdom\": \"UK\",\n",
     "    \"England\": \"UK\",\n",
+    "    \"Uk\":\"UK\",\n",
     "    \"Brasil\": \"Brazil\",\n",
     "    \"México\": \"Mexico\",\n",
     "}\n",
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "001c3b82",
    "metadata": {},
    "outputs": [
@@ -196,9 +197,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/d0/51lrq2bs29b460214r0kpfrm0000gn/T/ipykernel_24704/451050775.py:15: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "/var/folders/d0/51lrq2bs29b460214r0kpfrm0000gn/T/ipykernel_24704/1662644144.py:15: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
       "  data_shark[\"Full_Date\"] = pd.to_datetime(\n",
-      "/var/folders/d0/51lrq2bs29b460214r0kpfrm0000gn/T/ipykernel_24704/451050775.py:15: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/d0/51lrq2bs29b460214r0kpfrm0000gn/T/ipykernel_24704/1662644144.py:15: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  data_shark[\"Full_Date\"] = pd.to_datetime(\n"
      ]
     }
@@ -213,7 +214,7 @@
     "data_shark[\"Full_Date\"] = (\n",
     "    data_shark[\"Full_Date\"]\n",
     "    .str.replace(r\"(st|nd|rd|th)\", \"\", regex=True)  \n",
-    "    .str.replace(r\"[–\\-]\", \" \", regex=True)         \n",
+    "    .str.replace(r\"(-)\", \" \", regex=True)         \n",
     "    .str.strip() \n",
     ")   \n",
     "\n",
@@ -221,13 +222,13 @@
     "data_shark[\"Full_Date\"] = pd.to_datetime(\n",
     "    data_shark[\"Full_Date\"],\n",
     "    errors=\"coerce\",\n",
-    "    infer_datetime_format=True,  # deja que pandas adivine el formato\n",
+    "    infer_datetime_format=True,  \n",
     "    dayfirst=True\n",
     ")\n",
     "\n",
     "#WE CREATE OUR COLUMNS\n",
     "data_shark[\"DAY\"] = data_shark[\"Full_Date\"].dt.day\n",
-    "data_shark[\"MONTH\"] = data_shark[\"Full_Date\"].dt.month_name()  # Ejemplo: October, February\n",
+    "data_shark[\"MONTH\"] = data_shark[\"Full_Date\"].dt.month_name()  # Example: October, February\n",
     "data_shark[\"YEAR\"] = data_shark[\"Full_Date\"].dt.year\n",
     "\n",
     "print(data_shark[[\"DATE\", \"DAY\", \"MONTH\", \"YEAR\"]].head(10))\n"
