--- a/notebooks/blanca.ipynb
+++ b/notebooks/blanca.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "961c8b30",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "id": "18d81baa",
    "metadata": {},
    "outputs": [
@@ -141,9 +141,9 @@
       " 'Tanzania' 'Panama' 'Philippines' 'Atlantic Ocean' 'Johnston Island'\n",
       " 'Marshall Islands' 'Caribbean Sea' 'Turkey' 'Cuba' 'Guatemala'\n",
       " 'North Atlantic Ocean' 'North Pacific Ocean' 'Pacific Ocean'\n",
-      " 'Indian Ocean' 'UK' 'Israel' 'Italy / Croatia' 'India' 'Haiti' 'Yemen'\n",
-      " 'Crete' 'France' 'Syria' 'Azores' 'Fiji' 'Guyana' 'China' 'Norway'\n",
-      " 'Iceland' 'Roatan' 'Guinea']\n"
+      " 'Indian Ocean' 'UK' 'Israel' 'India' 'Haiti' 'Yemen' 'Crete' 'France'\n",
+      " 'Syria' 'Azores' 'Fiji' 'Guyana' 'China' 'Norway' 'Iceland' 'Roatan'\n",
+      " 'Guinea']\n"
      ]
     }
    ],
@@ -166,13 +166,14 @@
     "}\n",
     "\n",
     "data_shark[\"COUNTRY\"] = data_shark[\"COUNTRY\"].replace(country_replacements)\n",
+    "data_shark = data_shark[data_shark[\"COUNTRY\"] != \"Italy / Croatia\"]\n",
     "\n",
     "print(data_shark[\"COUNTRY\"].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "001c3b82",
    "metadata": {},
    "outputs": [
@@ -180,27 +181,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          DATE  DAY MONTH  YEAR\n",
-      "0  25 Aug 2023  NaN   NaN   NaN\n",
-      "1  21 Aug-2023  NaN   NaN   NaN\n",
-      "2  07-Jun-2023  NaN   NaN   NaN\n",
-      "3  02-Mar-2023  NaN   NaN   NaN\n",
-      "4  18-Feb-2023  NaN   NaN   NaN\n",
-      "5  08-Feb-2022  NaN   NaN   NaN\n",
-      "6  15-Nov-2021  NaN   NaN   NaN\n",
-      "7  16-Oct-2021  NaN   NaN   NaN\n",
-      "8  10-Sep-2021  NaN   NaN   NaN\n",
-      "9  29-Jul-2020  NaN   NaN   NaN\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/d0/51lrq2bs29b460214r0kpfrm0000gn/T/ipykernel_24704/1662644144.py:15: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
-      "  data_shark[\"Full_Date\"] = pd.to_datetime(\n",
-      "/var/folders/d0/51lrq2bs29b460214r0kpfrm0000gn/T/ipykernel_24704/1662644144.py:15: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  data_shark[\"Full_Date\"] = pd.to_datetime(\n"
+      "           DATE  DAY MONTH  YEAR\n",
+      "0   25 Aug 2023  NaN   NaN   NaN\n",
+      "1   21 Aug-2023  NaN   NaN   NaN\n",
+      "2   07-Jun-2023  NaN   NaN   NaN\n",
+      "3   02-Mar-2023  NaN   NaN   NaN\n",
+      "4   18-Feb-2023  NaN   NaN   NaN\n",
+      "5   08-Feb-2022  NaN   NaN   NaN\n",
+      "6   15-Nov-2021  NaN   NaN   NaN\n",
+      "7   16-Oct-2021  NaN   NaN   NaN\n",
+      "8   10-Sep-2021  NaN   NaN   NaN\n",
+      "9   29-Jul-2020  NaN   NaN   NaN\n",
+      "10  06-Jun-2020  NaN   NaN   NaN\n",
+      "11  20-Dec-2019  NaN   NaN   NaN\n",
+      "12  21-Oct-2019  NaN   NaN   NaN\n",
+      "13  28-Jul-2019  NaN   NaN   NaN\n",
+      "14  18-Jul-2019  NaN   NaN   NaN\n"
      ]
     }
    ],
@@ -213,16 +209,19 @@
     "#WE ELIMINATE SUFIX AS 1ST , 2ND ....\n",
     "data_shark[\"Full_Date\"] = (\n",
     "    data_shark[\"Full_Date\"]\n",
-    "    .str.replace(r\"(st|nd|rd|th)\", \"\", regex=True)  \n",
-    "    .str.replace(r\"(-)\", \" \", regex=True)         \n",
-    "    .str.strip() \n",
+    "    .str.replace(\"[-_/]\", \" \", regex=False)\n",
+    "    .str.replace(\"st\", \"\", regex=False)\n",
+    "    .str.replace(\"nd\", \"\", regex=False)\n",
+    "    .str.replace(\"rd\", \"\", regex=False)\n",
+    "    .str.replace(\"th\", \"\", regex=False)\n",
+    "    .str.strip()\n",
     ")   \n",
     "\n",
     "#WE ASK PANDA TO TRY TO READ THE DATE \n",
     "data_shark[\"Full_Date\"] = pd.to_datetime(\n",
-    "    data_shark[\"Full_Date\"],\n",
-    "    errors=\"coerce\",\n",
-    "    infer_datetime_format=True,  \n",
+    "    data_shark[\"Full_Date\"], \n",
+    "    format=\"%d %b %Y\",   \n",
+    "    errors=\"coerce\", \n",
     "    dayfirst=True\n",
     ")\n",
     "\n",
@@ -231,16 +230,8 @@
     "data_shark[\"MONTH\"] = data_shark[\"Full_Date\"].dt.month_name()  # Example: October, February\n",
     "data_shark[\"YEAR\"] = data_shark[\"Full_Date\"].dt.year\n",
     "\n",
-    "print(data_shark[[\"DATE\", \"DAY\", \"MONTH\", \"YEAR\"]].head(10))\n"
+    "print(data_shark[[\"DATE\", \"DAY\", \"MONTH\", \"YEAR\"]].head(15))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0594f16c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
