--- a/notebooks/data-cleaned.ipynb
+++ b/notebooks/data-cleaned.ipynb
@@ -9267,6 +9267,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2498,
+   "id": "78cc3166",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan])"
+      ]
+     },
+     "execution_count": 2498,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Fatal Y/N'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2476,
    "id": "9b84f3b5",
    "metadata": {},
