--- a/notebooks/Blanca.ipynb
+++ b/notebooks/Blanca.ipynb
@@ -5401,7 +5401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ensure 'Age' is numeric\n",
+    "# Ensure 'Age' is numeric.\n",
     "df['Age'] = pd.to_numeric(df['Age'], errors='coerce')\n",
     "# Drop rows where Age is NaN (optional)\n",
     "df = df.dropna(subset=['Age'])\n",
